[tool.poetry]
name = "dynamic-fastmcp"
version = "0.1.0"
description = "Dynamic FastMCP extends the MCP FastMCP server with dynamic tool capabilities that adapt behavior based on request context"
authors = ["Bob Remeika <bob@ragie.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
